# pyRANSAC-3D

./: .gitignore  404.html  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  aux.py  caixa6.ply  caixa8.ply  cilinder.py  cuboid.py  index.html  plane (another copy).py  plane (copy).py  plane.py  pydoc-markdown.yml  pyproject.toml  requirements-dev.txt  setup.py  sitemap.xml  tasks.py  test_circle.py  test_cuboid.py  test_cylinder.py  test_line.py  test_plane.py  test_point.py  test_sphere.py  test_torus.py
CPP_files/: line.cpp  line.h  pyransac.cpp
CPP_files./: doc
api-documentation/auxiliar-functions/: index.html
api-documentation/auxiliary/: index.html
api-documentation/circle/: index.html
api-documentation/cuboid/: index.html
api-documentation/cylinder/: index.html
api-documentation/line/: index.html
api-documentation/plane/: index.html
code/: index.html
contributing/: index.html
license/: index.html
pyRANSAC_3D/: aux.py  cuboid.py  cylinder.py  plane.py
pyransac3d/: Ransac_c.py  __init__.py  aux.py  aux_functions.py  baseRansac.py  circle.py  cuboid.py  cylinder.py  line.h  line.py  line_cpp.py  plane.py  point.py  sphere.py  teste.cpp  teste.h  torus.py
search/: search_index.json
tests/: ThreadTests.ipynb  test_circle.py  test_cuboid.py  test_cylinder.py  test_line.py  test_line_cpp.py  test_plane.py  test_point.py  test_sphere.py  testing_parallel_1.py  testing_parallel_2.py  testing_parallel_3.py  testing_parallel_4.py  testing_parallel_5.py  testing_parallel_6.py  testing_parallel_7.py  testing_parallel_8.py
(+8 files in other folders)
